# VapourSynth-FFT3DFilter

./: FFT3DFilter.cpp  FFT3DFilter.h  FFT3DFilterTransform.cpp  GNUmakefile  Plugin.cpp  configure  fft3dfilter_c.cpp  meson.build
msvc/: fft3dfilter.sln  fft3dfilter.vcxproj  fft3dfilter.vcxproj.filters
